fix: visibility of overview

--- a/Assignment5/public/assets/css/style.css
+++ b/Assignment5/public/assets/css/style.css
@@ -256,5 +256,8 @@ h6 {
     padding-left: 255px;
   }
 
+  #toolbar{
+    visibility: visible;
+  }
 
 }
